# showbox-studio

./: .gitignore  AGENTS.md  AGENT_GUIDE.md  CMakeLists.txt  GEMINI.md  Makefile  README.md  teste.sbxproj
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  codebase-map.json  data-flow.md  development-workflow.md  glossary.md  project-overview.md  security.md  testing-strategy.md  tooling.md
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
build-pkg/libs/showbox-ui/: Makefile
build-pkg/libs/showbox-ui/showbox-ui_autogen/: deps
build-pkg/showbox-studio_autogen/: deps
build-pkg/showbox-studio_autogen/MXUWEOXILK/: moc_Canvas.cpp  moc_Canvas.cpp.d
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/arch_modernization_builder_20260116/: index.md  metadata.json  plan.md  spec.md
conductor/archive/arch_std_legacy_isolation_20260115/: plan.md
conductor/archive/canvas_integration_20260115/: plan.md  spec.md
conductor/code_styleguides/: cpp-qt.md
conductor/tracks/advanced_usability_layout_v1_20260117/: plan.md
conductor/tracks/arch_modernization_builder_20260116/: plan.md
conductor/tracks/arch_std_legacy_isolation_20260115/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/canvas_integration_20260115/: index.md  metadata.json  plan.md
conductor/tracks/parser_modernization_v1_20260116/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/performance_stability_audit_v1_20260117/: index.md  metadata.json  plan.md
conductor/tracks/studio_canvas_integration_v1_20260116/: index.md  metadata.json  plan.md
conductor/tracks/visual_refinement_assets_v1_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/widget_parity_v1_20260116/: plan.md
docs/: ARCHITECTURE.md  Gerenciar_Projeto_Conductor.md  Pesquisa_Gemini_CLI_Conductor.md  Projeto_Piloto_Estrategia_Delegacao_Agentes_Showbox.md  SWARM_GUIDE.md  hybrid_workflow.md
packaging/: start-pkg-appimage.sh
packaging/appimage/: AppRun  build.sh  showbox-studio.desktop
scripts/evaluation/opencode/: result_bigpickle.cpp
src/: dev.Dockerfile  main.cpp  start-dev.sh
src/core/: IStudioWidgetFactory.h  PreviewManager.cpp  PreviewManager.h  ProjectSerializer.cpp  ProjectSerializer.h  ScriptGenerator.cpp  ScriptGenerator.h  StudioCommands.h  StudioController.cpp  StudioController.h  StudioWidgetFactory.h  WidgetFactory.h
src/gui/: ActionEditor.cpp  ActionEditor.h  Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h  ObjectInspector.cpp  ObjectInspector.h  PropertyEditor.cpp  PropertyEditor.h
src/gui/toolbox/: AbstractToolbox.cpp  AbstractToolbox.h  ToolboxClassic.cpp  ToolboxClassic.h  ToolboxTree.cpp  ToolboxTree.h
tests/: CMakeLists.txt  tst_Hierarchy.cpp  tst_ProjectSerializer.cpp  tst_ScriptGenerator.cpp  tst_StudioIntegration.cpp  tst_StylePerformance.cpp  tst_UndoRedo.cpp
